--- a/src/Mapbender/WmsBundle/Resources/views/WMS/edit.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/WMS/edit.html.twig
@@ -7,11 +7,11 @@
 
 {% block subnavigation %}
     <nav class="actions">
-        <a href="{{ path('mapbender_wms_wms_confirmdelete',{'wmsId':wms.id}) }}">{% trans %}Delete{% endtrans %}</a>
-        <a href="{{ path("mapbender_wms_wms_update",{'wmsId':wms.id}) }}">{% trans %}Update{% endtrans %}</a>
-{#
-        <a class="disabled" href="">{% trans %}Edit{% endtrans %}</a>
-#}
+      <ul>
+        <li><a href="{{ path('mapbender_wms_wms_confirmdelete',{'wmsId':wms.id}) }}">{% trans %}Delete{% endtrans %}</a></li>
+        <li><a class="disabled" href=#"">{% trans %}Edit{% endtrans %}</a></li>
+        <li><a class="disabled" href="#">{% trans %}Update{% endtrans %}</a></li>
+      </ul>
     </nav>
 {% endblock %}
 
