--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/general.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/general.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-{{ classNameLower }}"></div>
+<div id="{{ '{{ id }}' }}" class="mb-element mb-element-{{ classNameLower }}"></div>
