--- a/src/Mapbender/CoreBundle/Resources/views/User/login.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/User/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "MapbenderCoreBundle:User:base.html.twig" %}
+{% extends "MapbenderCoreBundle::backend.html.twig" %}
 
 {% block title %}Login{% endblock %}
 
