add default Mapbender object in javascript and fix Templating with format

--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -1,6 +1,6 @@
 {% extends "MapbenderCoreBundle::frontend.html.twig" %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}{{ configuration.title }}{% endblock %}
 
 {% block css %}
 	{% for css in assets.css %}
@@ -25,6 +25,6 @@
 	{{ element.render() | raw }}
 {% endfor %}
 </div>
-<script type="text/javascript">{{ configuration | raw }}</script>
+<script type="text/javascript">var Mapbender = Mapbender || {}; Mapbender.configuration = {{ configuration | json_encode | raw }}</script>
 {% endblock %}
 
