--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
@@ -22,6 +22,22 @@ div.mb-element-button {
     background-image: url('icons/MActionIdentify.png');
 }
 
+.ui-button .ui-button-icon-primary.lineruler {
+    background-image: url('icons/mActionMeasure.png');
+    margin-top: -12px!important;
+    margin-left: 0px!important;
+    height: 24px;
+    width: 24px;
+}
+
+.ui-button .ui-button-icon-primary.arearuler {
+    background-image: url('icons/mActionMeasureArea.png');
+    margin-top: -12px!important;
+    margin-left: 0px!important;
+    height: 24px;
+    width: 24px;
+}
+
 .mb-element-map {
     height: 100%;
 }
