Implemented download method for WMC element

--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmcstorage.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmcstorage.html.twig
@@ -28,4 +28,9 @@
     <div id="wmc-load-spinner">
         <p>{% trans %}Please wait, loading WMC...{% endtrans %}</p>
     </div>
+    <div id="wmc-download">
+      <form id="wmc-download-form" method="POST" target="_blank">
+        <textarea name="wmcContent" id="wmc-download-textarea"></textarea>
+      </form>
+    </div>
 </div>
