--- a/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
@@ -76,6 +76,7 @@
           <span>{{ value.scaleHintMax }}</span>
         </div>
         {% endif %}
+        {{ form_widget(form.latLonBounds) }}
     </div>
     <div>
     {% if form.layer|length > 0 %}
