--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
@@ -25,7 +25,7 @@
     {% if md.monitoringJobs|length > 0 %}
     <ul>
         {% for job in md.monitoringJobs %}
-            <li>{{ job.id }} {{ job.latency }} ms</li>
+            <li>{{ job.id }} {{ job.latency }} ms {{ job.status }}</li>
         {% endfor %}
     </ul>
     <h2>{{ "Last Result"|trans }}</h2>
