--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/index.html.twig
@@ -4,13 +4,14 @@
 
 {% block content %}
 {% if schedulers!=null %}
-    <table id="table-scheduler" >
+    <table class="listable" id="_table-scheduler" >
+        <caption>{{'Available Scheduler Definitions'|trans }}</caption>
         <thead>
             <tr>
-                <th>{{'name'|trans }}</th>
-                <th>{{'edit'|trans }}</th>
-                <th>{{'edit'|trans }}</th>
-                <th>{{'edit'|trans }}</th>
+                <th>{{'title'|trans }}</th>
+                <th>{{'starttimeinterval'|trans }}</th>
+                <th>{{'starttime'|trans }}</th>
+                <th>{{'jobinterval'|trans }}</th>
                 <th>{{'laststarttime'|trans }}</th>
                 <th>{{'lastendtime'|trans }}</th>
                 <th>{{'status'|trans }}</th>
@@ -21,23 +22,23 @@
         </thead>
         <tbody>
     {% for scheduler in schedulers %}
-        <tr {% if scheduler.current %} class="scheduler-current" {% endif %}>
-            <td>{{ scheduler.title }}</td>
-            <td>{{ scheduler.title }}</td>
-            <td>{{ scheduler.title }}</td>
-            <td>{{ scheduler.title }}</td>
+        <tr {% if scheduler.current==1 %} class="scheduler-current" {% endif %}>
+            <td>{{ scheduler.title }} {{scheduler.current}}</td>
+            <td>{{ scheduler.starttimeintervalopts[scheduler.starttimeinterval] }}</td>
+            <td>{{ scheduler.starttimeStr}} </td>
+            <td>{{ scheduler.jobintervalopts[scheduler.jobinterval] }}</td>
             <td>{% if scheduler.laststarttime!=null %}{{scheduler.laststarttime|date("m.d.Y H:i:s")}}{% endif %} </td>
             <td>{% if scheduler.lastendtime!=null %}{{ scheduler.lastendtime|date("m.d.Y H:i:s")}}{% endif %} </td>
             <td>{{ scheduler.status }}</td>
             <td><a href="{{ path('mapbender_monitoring_schedulerprofile_edit',{"spId":scheduler.id}) }}">{{'edit'|trans }}</a></td>
             <td><a href="{{ path('mapbender_monitoring_schedulerprofile_delete',{"spId":scheduler.id}) }}">{{'delete'|trans }}</a></td>
-            <td><a href="{{ path('mapbender_monitoring_schedulerprofile_current',{"spId":scheduler.id}) }}">{{'set_current'|trans }}</a></td>
+            <td>{% if scheduler.current!=1 %}<a href="{{ path('mapbender_monitoring_schedulerprofile_current',{"spId":scheduler.id}) }}">{{'set_current'|trans }}</a>{% endif %}</td>
         </tr>
     {% endfor %}
         </tbody>
     </table>        
 
 {% endif %}
-    <a href="{{ path('mapbender_monitoring_schedulerprofile_shownew') }}">{{'define Scheduler'|trans }}</a>
+<a class="a-scheduler" href="{{ path('mapbender_monitoring_schedulerprofile_shownew') }}">{{'define Scheduler'|trans }}</a>
 
 {% endblock %}
