--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
@@ -34,10 +34,10 @@
         {% set num = 0 %}
         {% for job in md.monitoringJobs %}
             {% if num == 0 %}
-                <tr class="job job-last"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("m.d.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>{% if job.changed %}CHANGED{% endif %}</td></tr>
+                <tr class="job job-last"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("d.m.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>{% if job.changed %}CHANGED{% endif %}</td></tr>
             {% elseif num < 10 %}
                 {% if job.changed %}
-                <tr class="job job-previous"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("m.d.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>CHANGED</td></tr>
+                <tr class="job job-previous"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("d.m.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>CHANGED</td></tr>
                 {% endif %}
             {% endif %}
             {% set num = num+1 %}
