--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/index.html.twig
@@ -14,6 +14,7 @@
                 <th>{{'jobinterval'|trans }}</th>
                 <th>{{'laststarttime'|trans }}</th>
                 <th>{{'lastendtime'|trans }}</th>
+                <th>{{'nextstart'|trans }}</th>
                 <th>{{'status'|trans }}</th>
                 <th>{{'edit'|trans }}</th>
                 <th>{{'delete'|trans }}</th>
@@ -27,8 +28,9 @@
             <td>{{ scheduler.starttimeintervalopts[scheduler.starttimeinterval] }}</td>
             <td>{{ scheduler.starttimeStr}} </td>
             <td>{{ scheduler.jobintervalopts[scheduler.jobinterval] }}</td>
-            <td>{% if scheduler.laststarttime!=null %}{{scheduler.laststarttime|date("m.d.Y H:i:s")}}{% endif %} </td>
-            <td>{% if scheduler.lastendtime!=null %}{{ scheduler.lastendtime|date("m.d.Y H:i:s")}}{% endif %} </td>
+            <td>{% if scheduler.laststarttime!=null %}{{scheduler.laststarttime|date("d.m.Y H:i:s")}}{% endif %} </td>
+            <td>{% if scheduler.lastendtime!=null %}{{ scheduler.lastendtime|date("d.m.Y H:i:s")}}{% endif %} </td>
+            <td>{% if scheduler.nextstarttime!=null %}{{ scheduler.nextstarttime|date("d.m.Y H:i:s")}}{% endif %} </td>
             <td>{{ scheduler.status }}</td>
             <td><a href="{{ path('mapbender_monitoring_schedulerprofile_edit',{"spId":scheduler.id}) }}">{{'edit'|trans }}</a></td>
             <td><a href="{{ path('mapbender_monitoring_schedulerprofile_delete',{"spId":scheduler.id}) }}">{{'delete'|trans }}</a></td>
@@ -38,7 +40,15 @@
         </tbody>
     </table>        
 
+    <a class="a-scheduler" href="{{ path('mapbender_monitoring_schedulerprofile_index') }}">{{'refresh table'|trans }}</a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    {% if process=='running' %}
+        <a class="a-scheduler" href="{{ path('mapbender_monitoring_schedulerprofile_stop') }}">{{'stop Scheduler'|trans }}</a>
+    {% else %}
+        <a class="a-scheduler" href="{{ path('mapbender_monitoring_schedulerprofile_start') }}">{{'start Scheduler'|trans }}</a>
+    {% endif %}
 {% endif %}
+<br /><br />
 <a class="a-scheduler" href="{{ path('mapbender_monitoring_schedulerprofile_shownew') }}">{{'define Scheduler'|trans }}</a>
 
 {% endblock %}
