new activity indicator element

--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.elements.css
@@ -116,30 +116,13 @@ div.mb-element-button {
 .mb-element-activityindicator {
     position: absolute;
     z-index: 10000;
-    top: 0;
-    width: 100%;
+    bottom: 0;
+    right: 0;
+    width: 32px;
     height: 32px;
-    background: green;
 }
 
-/**
- * Ajax-Only activity
- */
-body.mb-activity-ajax .mb-element-activityindicator {
-    background: red;
-}
-
-/**
- * Tile-Only activity
- */
-body.mb-activity-tile .mb-element-activityindicator {
-    background: yellow;
-}
-
-/**
- * Ajax+Tile activity
- */
-body.mb-activity-ajax.mb-activity-tile .mb-element-activityindicator {
-    background: orange;
+body.mb-activity .mb-element-activityindicator {
+    background: url('image/activity.gif');
 }
 
