Zoombar: Add zoom by box control

--- a/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
@@ -13,6 +13,9 @@
             <a title="{{ "Go forward" | trans }}"></a>
         </div>
 
+        <div class="zoom-box">
+            <a title="{{ "Zoom by box" | trans }}"></a>
+        </div>
 
         <div class="zoom-in">
             <a title="{{ "Zoom in" | trans }}"></a>
